--- a/TrackCloud/app/src/main/AndroidManifest.xml
+++ b/TrackCloud/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
+            android:configChanges="orientation|uiMode"
             android:theme="@style/Theme.TrackCloud">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
